# adventofcode

./: Cargo.toml  README.md
2023/01/: README.md
2023/01/1/: Cargo.toml  main.zig
2023/01/1/src/: main.rs
2023/01/2/: Cargo.toml
2023/01/2/src/: main.rs
2023/02/: README.md
2023/02/1/: Cargo.toml
2023/02/1/src/: main.rs
2023/02/2/: Cargo.toml
2023/02/2/src/: main.rs
2023/03/: README.md
2023/03/1/: Cargo.toml
2023/03/1/src/: main.rs
2023/03/2/: Cargo.toml
2023/03/2/src/: main.rs
2023/04/: README.md
2023/04/1/: Cargo.toml
2023/04/1/src/: main.rs
2023/04/2/: Cargo.toml
2023/04/2/src/: main.rs
2023/05/: README.md
2023/05/1/: Cargo.toml
2023/05/1/src/: main.rs
2023/05/2/: Cargo.toml
2023/05/2/src/: main.rs
2023/06/: README.md
2023/06/1/: Cargo.toml
2023/06/1/src/: main.rs
2023/06/2/: Cargo.toml
2023/06/2/src/: main.rs
2023/07/: README.md
2023/07/1/: Cargo.toml
2023/07/1/src/: main.rs
2023/07/2/: Cargo.toml
2023/07/2/src/: main.rs
2023/08/: README.md
2023/08/1/: Cargo.toml
2023/08/1/src/: main.rs
2023/08/2/: Cargo.toml
2023/08/2/src/: main.rs
2023/09/: README.md
2023/09/1/: Cargo.toml
2023/09/1/src/: main.rs
2023/09/2/: Cargo.toml
2023/09/2/src/: main.rs
2023/10/1/: Cargo.toml
2023/10/1/src/: main.rs
2023/10/2/: Cargo.toml
2023/10/2/src/: main.rs
rust/2023/01/2/: Cargo.toml
rust/2023/09/1/: Cargo.toml
zig/2015/01/1/: main.zig
zig/2015/01/2/: main.zig
zig/2023/01/1/: main.zig
zig/2024/01/1/: main.zig
zig/2024/01/2/: main.zig
zig/2025/01/1/: main.zig
(+30 files in other folders)
