[workspace]
resolver = "2"
members = [
    "2023/01/1",
    "2023/01/2",
    "2023/02/1",
    "2023/02/2",
    "2023/03/1",
    "2023/03/2",
    "2023/04/1",
    "2023/04/2",
    "2023/05/1",
    "2023/05/2",
    "2023/06/1",
    "2023/06/2",
    "2023/07/1",
    "2023/07/2",
    "2023/08/1",
    "2023/08/2",
    "2023/09/1",
    "2023/09/2",
    "2023/10/1",
]
